--- a/currentproj.Rmd
+++ b/currentproj.Rmd
@@ -13,7 +13,8 @@ library(psych)
 library(GPArotation)
 library(splines)
 #setwd('C:\\Users\\user\\Documents\\Database')
-setwd('/Users/vanshajchadha/Documents/Database/')
+#setwd('/Users/vanshajchadha/Documents/Database/')
+setwd('/Users/edisonlo/Desktop/Stat_project/Beijing-PM2.5Data/')
 data <- read.csv('BeijingPM25.csv')
 head(data)
 
